<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textViewRegistrationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/current_name_text_view"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRegistrationName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/name_text_plain"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:id="@+id/textViewRegistrationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_email_text_view"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRegistrationEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/email_text_plain"
        android:minHeight="48dp"
        android:inputType="textEmailAddress"
        android:text="" />

    <TextView
        android:id="@+id/textViewRegistrationPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_phone_text_view"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRegistrationPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/phone_text_plain"
        android:inputType="phone"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_password_text_view"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextRegistrationPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/password_text_plain"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/currency_text_view"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/spinnerCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:text="@string/register_button" />

    <Button
        android:id="@+id/buttonBackLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="120dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/orange"
        android:text="@string/backto_login_button" />


</LinearLayout>