<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewCurrentAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/current_account_text_view"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewCurrentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_name_text_view"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextCurrentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/name_text_plain"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="" />

            <TextView
                android:id="@+id/textViewCurrentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_email_text_view"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextCurrentEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/email_text_plain"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:text="" />

            <TextView
                android:id="@+id/textViewCurrentPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_phone_text_view"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextCurrentPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/phone_text_plain"
                android:inputType="phone"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textViewCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_password_text_view"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/password_text_plain"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textViewCurrentCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/current_currency_text_view"
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/spinnerCurrentCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/buttonSaveChanges"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/green"
                android:text="@string/save_changes_button" />

            <Button
                android:id="@+id/buttonLogOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/red"
                android:text="@string/log_out_button" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>